# cmake-issue

modules/: CMakeLists.txt  build.cmake
modules/foo/: CMakeLists.txt  foo.cpp
project/: CMakeLists.txt  main.cpp
